@@ -1,3 +1,10 @@
+2022-05-30T00:44:59Z:
+* notice: last 14d: unq all: 8 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 22 28 / 31 37
+* notice: next accum: outdated-unq outdated-all / unq all: 23 29 / 31 37
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-29T00:40:20Z:
 * notice: last 14d: unq all: 8 9
 * notice: prev accum: outdated-unq outdated-all / unq all: 21 27 / 31 37
